tests/format/misc/errors/js/import-assertions/invalid-ts-type-import-1.mts
import type module foo from "./module.wasm";
